fix main component not visible at the end of document

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,11 @@
 @import '../../styles.scss';
 
-.container{  
+.container{   
     p{ 
         display: flex;
         justify-content: center; 
         text-align: center;
+        margin-bottom: 5px;
     }  
     .title{ 
         color: $h2color ;
@@ -19,7 +20,6 @@
 
     .space{
         margin-top: 2%;
-        margin-bottom: 8%;
     }
 }
 
@@ -27,10 +27,12 @@
     margin-left: auto;
     margin-right: auto;
     width: 85%; 
+    margin-bottom: 10%;
 }
 
 .mobile-container {
     margin-left: auto;
     margin-right: auto;
     width: 95%; 
+    margin-bottom: 25%;
 }
